--- a/BCoB.css
+++ b/BCoB.css
@@ -72,7 +72,7 @@ hr {
 }
 .BTopNav .BLeft {
 	float: left;
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/8kkaj111.png') no-repeat;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/btople10.png') no-repeat;
 	width: 480px;
 	height: 39px;
 	margin: 10px 0 0 0;
@@ -112,7 +112,7 @@ hr {
 	height: 208px;
 }
 .BHeader .BHeader01 {
-	background: transparent url('http://i56.servimg.com/u/f56/14/71/20/17/bheade13.png') no-repeat scroll right top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bheade10.png') no-repeat scroll right top;
 	padding: 0 76px 0 0;
 	height: 208px;
 }
@@ -169,13 +169,13 @@ hr {
 	height: 72px;
 }
 .BFooter .BFooterRight {
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/bfoote11.png') no-repeat scroll right top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bfoote11.png') no-repeat scroll right top;
 	padding: 0 436px 0 0;
 	height: 72px;
 }
 .BFooter .BFooterRight .BFooterLeft {
 	float: left;
-	background: transparent url('http://i56.servimg.com/u/f56/14/71/20/17/bfoote10.png') no-repeat scroll left top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bfoote10.png') no-repeat scroll left top;
 	width: 144px;
 	height: 72px;
 }
@@ -193,7 +193,7 @@ hr {
 .bdayh-cattopright {
 	width: 332px;
 	height: 69px;
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/bdayhc11.png') no-repeat scroll right top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bdayhc10.png') no-repeat scroll right top;
 	float: right;
 }
 .bdayh-cattopleft {
