--- a/BCoB.css
+++ b/BCoB.css
@@ -112,7 +112,7 @@ hr {
 	height: 208px;
 }
 .BHeader .BHeader01 {
-	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bheade10.png') no-repeat scroll right top;
+	background: transparent url('https://i56.servimg.com/u/f56/14/71/20/17/bheade36.png') no-repeat scroll right top;
 	padding: 0 76px 0 0;
 	height: 208px;
 }
@@ -133,7 +133,7 @@ hr {
 	float: right;
 }
 .BHeaderLogo .BLogo {
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/bheade13.png') no-repeat;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bheade10.png') no-repeat;
 	width: 452px;
 	height: 208px;
 	float: right;
