--- a/BCoE.css
+++ b/BCoE.css
@@ -72,7 +72,7 @@ hr {
 }
 .BTopNav .BLeft {
 	float: left;
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/8kkaj114.png') no-repeat;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/btople15.png') no-repeat;
 	width: 480px;
 	height: 39px;
 	margin: 10px 0 0 0;
@@ -133,7 +133,7 @@ hr {
 	float: right;
 }
 .BHeaderLogo .BLogo {
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/bheade16.png') no-repeat;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bheade16.png') no-repeat;
 	width: 452px;
 	height: 208px;
 	float: right;
@@ -169,13 +169,13 @@ hr {
 	height: 72px;
 }
 .BFooter .BFooterRight {
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/bfoote14.png') no-repeat scroll right top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bfoote19.png') no-repeat scroll right top;
 	padding: 0 436px 0 0;
 	height: 72px;
 }
 .BFooter .BFooterRight .BFooterLeft {
 	float: left;
-	background: transparent url('http://i56.servimg.com/u/f56/14/71/20/17/bfoote24.png') no-repeat scroll left top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bfoote18.png') no-repeat scroll left top;
 	width: 144px;
 	height: 72px;
 }
@@ -193,7 +193,7 @@ hr {
 .bdayh-cattopright {
 	width: 332px;
 	height: 69px;
-	background: transparent url('http://i39.servimg.com/u/f39/18/88/11/12/bdayhc14.png') no-repeat scroll right top;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/bdayhc15.png') no-repeat scroll right top;
 	float: right;
 }
 .bdayh-cattopleft {
