--- a/BCoA.css
+++ b/BCoA.css
@@ -281,7 +281,7 @@ hr {
 .BTmez li {
 	display: inline;
 	float: right;
-	background: transparent url('http://i39.servimg.com/u/f39/14/17/13/55/ecza5110.png') no-repeat scroll center center;
+	background: transparent url('https://i73.servimg.com/u/f73/14/44/77/00/ecza510.png') no-repeat scroll center center;
 	width: 161px;
 	height: 48px;
 	padding: 70px 15px 0 15px;
